--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -82,3 +82,19 @@ body{
     color: #fff;
 }
 
+.login-image img{
+    margin: auto;
+    display: block;
+    height: 250px;
+    width: 250px;
+}
+
+.login-title{
+    color: #4cd294;
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.login-form{
+    padding: 15px;
+}
