--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -98,3 +98,10 @@ body{
 .login-form{
     padding: 15px;
 }
+
+.register-image img{
+    margin: auto;
+    display: block;
+    height: 180px;
+    width: 180px;
+}
