--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,9 +1,11 @@
 @import "bootstrap";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,600;0,800;1,200;1,400;1,600;1,800&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Shantell+Sans:wght@300&display=swap');
 
 body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;    
+    font-family: 'Shantell Sans', cursive;    
 }
 .welcome-page-area {
     /* background-image: url('../../public/storage/image/bg.jpg'); */
@@ -39,18 +41,20 @@ body{
     margin: auto;
     border-radius: 20px;
     height: 200px;
-    width: 200px;
+    width: 220px;
 }
 
 .wallet-title{
     color: #4cd294;
     font-size: 45px;
     font-weight: 500;
+    font-family: 'Kaushan Script', cursive;
 }
 
 .wallet-slug{
     color: #fd9f45;
     font-size: 18px;
+    font-family: 'Kaushan Script', cursive;
 }
 
 .register-btn a{
@@ -94,6 +98,7 @@ body{
     color: #4cd294;
     font-size: 30px;
     font-weight: 500;
+    font-family: 'Kaushan Script', cursive;
 }
 
 .login-form{
@@ -110,6 +115,7 @@ body{
 .navbar-brand{
     color: #fd9f45;
     font-weight: bold;
+    font-family: 'Kaushan Script', cursive;
 }
 
 .navbar-brand:hover{
