--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10962,4 +10962,35 @@ body{
     min-height: 662px;
 }
 
+.income-body-area{
+    min-height: 521px;
+}
+
+.income-table{
+    height: 367px;
+    overflow-y: auto;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 7px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #fd9f45; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background:#4cd294; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background:#4cd294; 
+  }
+
 
