--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10967,7 +10967,12 @@ body{
 }
 
 .income-table{
-    height: 367px;
+    height: 358px;
+    overflow-y: auto;
+}
+
+.income-month-table{
+    height: 400px;
     overflow-y: auto;
 }
 
