--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11003,4 +11003,11 @@ body{
     overflow-y: auto;
   }
 
+  .about-my-wallet{
+    color: #fd9f45;
+    font-size: 45px;
+    font-weight: 500;
+    font-family: 'Kaushan Script', cursive;
+  }
+
 
