--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -182,3 +182,10 @@ body{
     overflow-y: auto;
   }
 
+  .about-my-wallet{
+    color: #fd9f45;
+    font-size: 45px;
+    font-weight: 500;
+    font-family: 'Kaushan Script', cursive;
+  }
+
